# phosh

./: .dir-locals.el  .editorconfig  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .zanata.xml  HACKING.md  NEWS  README.md  config.h.in  gcovr.cfg  meson.build  meson_options.txt  phosh-config.h.in  phosh.doap  rootston.ini  run.in  weston.ini
calendar-server/: CalendarServer.service.in  calendar-debug.h  calendar-server.c  calendar-sources.c  calendar-sources.h  gnome-shell-calendar-server.c  meson.build
data/: 00_mobi.Phosh.gschema.override  00_sm.puri.Phosh.gschema.override  leak-suppress.txt  meson.build  mobi.phosh.Shell.Search.service.in  mobi.phosh.Shell.desktop.in.in  mobi.phosh.shell.gschema.xml  phoc.ini  phosh-portals.conf  phosh-session.in  phosh-shell.portal  phosh.in  phosh.portal  phosh.service  phosh.session.desktop.in.in  rootston.ini  sm.puri.OSK0.desktop.in.in  sm.puri.Phosh.desktop.in.in  sm.puri.phosh.gschema.xml  valgrind.suppressions
data/icons/: meson.build
data/systemd/: meson.build  mobi.phosh.Shell.target  phosh.session.conf.in  sm.puri.Phosh.service.in  sm.puri.Phosh.target
data/wayland-sessions/: phosh.desktop
docs/: app-dev.md  gettingstarted.md  meson.build  patterns.md  phosh-dbus-sm.puri.OSK0.md  phosh-docs.xml  phosh-session.rst  phosh.gsettings.rst  phosh.rst  phosh.toml.in  special.xml  urlmap.js
docs/xml/: meson.build
plugins/: meson.build  phosh-plugin.h.in
plugins/caffeine-quick-setting/: caffeine-quick-setting.c  caffeine-quick-setting.desktop.in.in  caffeine-quick-setting.h  meson.build  phosh-plugin-caffeine-quick-setting.c  phosh-plugin-caffeine-quick-setting.gresources.xml  qs.ui
plugins/calendar/: calendar.c  calendar.desktop.in.in  calendar.h  calendar.ui  meson.build  phosh-plugin-calendar.c  phosh-plugin-calendar.gresources.xml
plugins/dark-mode-quick-setting/: dark-mode-quick-setting.c  dark-mode-quick-setting.desktop.in.in  dark-mode-quick-setting.h  meson.build  phosh-plugin-dark-mode-quick-setting.c  phosh-plugin-dark-mode-quick-setting.gresources.xml  qs.ui
plugins/emergency-info/: emergency-info-common.h  emergency-info-row.c  emergency-info-row.h  emergency-info-row.ui  emergency-info.c  emergency-info.desktop.in.in  emergency-info.h  emergency-info.ui  meson.build  phosh-plugin-emergency-info.c  phosh-plugin-emergency-info.gresources.xml
plugins/launcher-box/: launcher-box.c  launcher-box.desktop.in.in  launcher-box.h  launcher-box.ui  launcher-item.c  launcher-item.h  launcher-row.c  launcher-row.h  launcher-row.ui  meson.build  phosh-plugin-launcher-box.c  phosh-plugin-launcher-box.gresources.xml  sm.puri.phosh.plugins.launcher-box.gschema.xml
plugins/media-players/: media-players.c  media-players.desktop.in.in  media-players.h  media-players.ui  meson.build  phosh-plugin-media-players.c  phosh-plugin-media-players.gresources.xml
plugins/mobile-data-quick-setting/: meson.build  mobile-data-quick-setting.c  mobile-data-quick-setting.desktop.in.in  mobile-data-quick-setting.h  phosh-plugin-mobile-data-quick-setting.c  phosh-plugin-mobile-data-quick-setting.gresources.xml  qs.ui
plugins/night-light-quick-setting/: meson.build  night-light-quick-setting.c  night-light-quick-setting.desktop.in.in  night-light-quick-setting.h  phosh-plugin-night-light-quick-setting.c  phosh-plugin-night-light-quick-setting.gresources.xml  qs.ui
plugins/pomodoro-quick-setting/: meson.build  mobi.phosh.plugins.pomodoro.gschema.xml  phosh-plugin-pomodoro-quick-setting.c  phosh-plugin-pomodoro-quick-setting.gresources.xml  pomodoro-quick-setting.c  pomodoro-quick-setting.desktop.in.in  pomodoro-quick-setting.h  qs.ui
protocol/: meson.build  phoc-device-state-unstable-v1.xml  phoc-layer-shell-effects-unstable-v1.xml  phosh-mobile-shell.xml  phosh-private.xml
searchd/: meson.build  search-provider.c  search-provider.h  searchd.c  searchd.h
src/: activity.c  activity.h  ambient.c  ambient.h  animation.c  animation.h  app-auth-prompt.c  app-auth-prompt.h  app-grid-base-button.c  app-grid-base-button.h  app-grid-button.c  app-grid-button.h  app-grid-folder-button.c  app-grid-folder-button.h  app-grid.c  app-grid.h  app-list-model.c  app-list-model.h  app-tracker.c  app-tracker.h  app.c  app.h  arrow.c  arrow.h  auth-prompt-option.c  auth-prompt-option.h  auth.c  auth.h  background-cache.c  background-cache.h  background-image.c  background-image.h  background-manager.c  background-manager.h  background.c  background.h  batteryinfo.c  batteryinfo.h  bidi.c  bidi.h  (+281 more)
src/ui/: app.ui  (+52 more)
tests/: meson.build  mock-mm-nm.py  phosh-test.gresources.xml  phoshstub.c  screenshot-no-anim-overrides.css  sm.puri.TestData.desktop  smoke  test-activity.c  test-app-auth-prompt.c  test-app-grid-button.c  test-app-grid-folder-button.c  test-app-list-model.c  test-app.c  test-background.c  test-calls-manager.c  test-connectivity-info.c  test-css.c  test-drag-surface.c  test-end-session-dialog.c  test-fading-label.c  test-favorites.c  test-favourite-model.c  test-folder-info.c  test-gamma-table.c  test-gtk-mount-manager.c  test-head.c  test-idle-manager.c  test-keypad.c  test-layer-surface.c  test-lockscreen.c  test-lockshield.c  test-media-player.c  test-monitor-manager.c  test-mount-notification.c  test-notification-banner.c  test-notification-content.c  test-notification-frame.c  test-notification-list.c  test-notification-source.c  test-notification.c  (+38 more)
tools/: app-buttons.c  app-grid-standalone.c  app-scroll.c  build-symbols-file  check-access-portal  check-deprecated-ui-props  check-doc  check-end-session  check-exported-symbols  check-license-headers.py  check-mount-operation  check-notification  check-osd  check-po  check-screen-saver  check-screenshot  custom-quick-settings-standalone.c  doc-check  dump-app-list.c  image-notify.c  layer-shell-ui-edit  meson.build  montage-screenshots  notify-blocks.c  notify-server-standalone.c  phosh-osk-stub.c  phosh-osk-stub.gresources.xml  plugin-prefs-standalone.c  pos-input-surface.c  pos-input-surface.h  quick-settings-box-standalone.c  run_tool.in  search.c  widget-box-standalone.c
(+347 files in other folders)
